// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewEntity.vue enter in adding mode set textSelected renders correctly 1`] = `
<form>
  <bh-button-stub size="small" type="button" rounded="true"><span><span>Add entity</span> <span>for "douglas"</span></span></bh-button-stub>
</form>
`;

exports[`NewEntity.vue renders correctly 1`] = `
<form>
  <bh-button-stub disabled="true" size="small" type="button" rounded="true" tooltiphover="Highlight words to mark as entity"><span><span>Add entity</span>
    <!----></span></bh-button-stub>
</form>
`;
